--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Hello Commit</h1>
-    <img src="{{ logo_url }}" alt="Logo">
+    <img src="{{ logo_url }}" width="257" height="334" alt="Logo">
 </body>
 
 </html>
