--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Commit</title>
-</head>
-
-<body>
+  </head>
+  <body>
     <h1>Hello Commit</h1>
-    <img src="{{ logo_url }}" width="257" height="334" alt="Logo">
-</body>
-
+    <img src="{{ logo_url }}" width="257" height="334" alt="Logo" />
+  </body>
 </html>
