--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Commit</title>
-  </head>
-  <body>
-    <h1>Hello Commit</h1>
-    <img src="{{ logo_url }}" width="257" height="334" alt="Logo" />
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hello Commit v2</title>
+</head>
+
+<body>
+  <h1>Hello Commit</h1>
+  <img src="{{ logo_url }}" width="257" height="334" alt="Logo" />
+</body>
+
 </html>
