--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello Commit v2</title>
+  <title>Hello Commit</title>
 </head>
 
 <body>
-  <h1>Hello Commit</h1>
+  <h1>Hello Commit v2</h1>
   <img src="{{ logo_url }}" width="257" height="334" alt="Logo" />
 </body>
 
